# QolsysController

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Readme.md  example.py  main.py  mypy.ini  pass.py  pyproject.toml  requirements.txt  test24.txt  test25.txt  text.txt  text23.txt
.github/: dependabot.yml
.github/workflows/: build.yml  pr-preview.yml  publish.yml  release.yml  tags.yml
config/: config.json  pairing.status
docs/: info_pairing.md  info_qolsys_controller.md
keys/: f2163e0881a7.cer  f2163e0881a7.csr  f2163e0881a7.key
qolsys/: controller.py  event.py  exceptions.py  observable.py  panel.py  partition.py  pki.py  plugin.py  pluginC4.py  pluginRemote.py  sensor.py  settings.py  socket.py  state.py  utils.py  utils_mqtt.py  zwave_device.py
qolsys_controller/: __init__.py  adc_device.py  adc_service.py  adc_service_garagedoor.py  adc_service_light.py  adc_service_malfunction.py  cli.py  controller.py  db.py  enum.py  enum_adc.py  enum_qolsys.py  enum_zwave.py  errors.py  event.py  event_mqtt.py  exceptions.py  mdns.py  mqtt_command.py  mqtt_command_queue.py  observable.py  pairing_server.py  panel.py  partition.py  pki.py  plugin.py  pluginC4.py  pluginRemote.py  plugin_c4.py  plugin_remote.py  scene.py  settings.py  state.py  task_manager.py  users.py  utils.py  utils_mqtt.py  weather.py  zone.py  zwave_device.py  (+14 more)
qolsys_controller/automation/: device.py  protocol_battery.py  protocol_cover.py  protocol_light.py  protocol_lock.py  protocol_service.py  protocol_status.py  protocol_thermostat.py  (+13 more)
tests/: test_outlet_service.py  test_partition.py
(+126 files in other folders)
